--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,18 @@
+asgiref==3.9.1
+attrs==25.3.0
 Django==5.2.6
+django-cors-headers==4.8.0
+django-filter==25.1
 djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
+inflection==0.5.1
+jsonschema==4.25.1
+jsonschema-specifications==2025.9.1
+PyJWT==2.10.1
 python-dotenv==1.0.1
-django-filter==25.1
+PyYAML==6.0.2
+referencing==0.36.2
+rpds-py==0.27.1
+sqlparse==0.5.3
+uritemplate==4.2.0
