--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -31,6 +31,10 @@ jobs:
           script: |
             set -euo pipefail
             cd ~/future-school/future-school-backend
+            # Ensure media directory exists and is writable by deploy user
+            mkdir -p ~/future-school/future-school-backend/media/submissions
+            chmod 755 ~/future-school/future-school-backend/media || true
+            chown -R "$(whoami)":"$(whoami)" ~/future-school/future-school-backend/media || true
             docker compose down || true
             git fetch --all
             git checkout main || git checkout -b main
