--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,45 +39,45 @@ jobs:
             docker compose up --build -d
             docker system prune -f || true
 
-      - name: Notify Telegram (HTML)
-        if: ${{ always() }}
-        env:
-          TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
-          TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
-          REPO: ${{ github.repository }}
-          REF: ${{ github.ref_name }}
-          SHA: ${{ github.sha }}
-          COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
-          RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
-          START_TS: ${{ steps.t0.outputs.start }}
-          STATUS: ${{ job.status }}   # success | failure | cancelled
-        run: |
-          set -euo pipefail
-          END_TS="$(date +%s)"
-          DUR=$(( END_TS - START_TS ))
-          H=$(( DUR/3600 )); M=$(( (DUR%3600)/60 )); S=$(( DUR%60 ))
-          printf -v D_HMS '%02d:%02d:%02d' "$H" "$M" "$S"
-          SHORT_SHA="${SHA::7}"
+      # - name: Notify Telegram (HTML)
+      #   if: ${{ always() }}
+      #   env:
+      #     TG_BOT_TOKEN: ${{ secrets.TG_BOT_TOKEN }}
+      #     TG_CHAT_ID: ${{ secrets.TG_CHAT_ID }}
+      #     REPO: ${{ github.repository }}
+      #     REF: ${{ github.ref_name }}
+      #     SHA: ${{ github.sha }}
+      #     COMMIT_MESSAGE: ${{ github.event.head_commit.message }}
+      #     RUN_URL: ${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }}
+      #     START_TS: ${{ steps.t0.outputs.start }}
+      #     STATUS: ${{ job.status }}   # success | failure | cancelled
+      #   run: |
+      #     set -euo pipefail
+      #     END_TS="$(date +%s)"
+      #     DUR=$(( END_TS - START_TS ))
+      #     H=$(( DUR/3600 )); M=$(( (DUR%3600)/60 )); S=$(( DUR%60 ))
+      #     printf -v D_HMS '%02d:%02d:%02d' "$H" "$M" "$S"
+      #     SHORT_SHA="${SHA::7}"
 
-          if [ "$STATUS" = "success" ]; then
-            ICON="✅"; TITLE="Деплой выполнен успешно"
-          elif [ "$STATUS" = "cancelled" ]; then
-            ICON="⚠️"; TITLE="Деплой отменён"
-          else
-            ICON="❌"; TITLE="Сбой деплоя"
-          fi
+      #     if [ "$STATUS" = "success" ]; then
+      #       ICON="✅"; TITLE="Деплой выполнен успешно"
+      #     elif [ "$STATUS" = "cancelled" ]; then
+      #       ICON="⚠️"; TITLE="Деплой отменён"
+      #     else
+      #       ICON="❌"; TITLE="Сбой деплоя"
+      #     fi
 
-          TEXT="$ICON <b>$TITLE</b>
-                <b>Проект:</b> <code>$REPO</code>
-                <b>Ветка:</b> <code>$REF</code>
-                <b>Коммит:</b> <code>$SHORT_SHA</code>
-                <b>Сообщение:</b> <code>$COMMIT_MESSAGE</code>
-                <b>Длительность:</b> <code>$D_HMS</code>
-                <b>Логи:</b> <a href=\"$RUN_URL\">запуск GitHub Actions</a>
-                <i>Пушнул: ${{ github.actor }}</i>"
+      #     TEXT="$ICON <b>$TITLE</b>
+      #           <b>Проект:</b> <code>$REPO</code>
+      #           <b>Ветка:</b> <code>$REF</code>
+      #           <b>Коммит:</b> <code>$SHORT_SHA</code>
+      #           <b>Сообщение:</b> <code>$COMMIT_MESSAGE</code>
+      #           <b>Длительность:</b> <code>$D_HMS</code>
+      #           <b>Логи:</b> <a href=\"$RUN_URL\">запуск GitHub Actions</a>
+      #           <i>Пушнул: ${{ github.actor }}</i>"
 
-          curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
-            -d chat_id="${TG_CHAT_ID}" \
-            -d text="$TEXT" \
-            -d parse_mode="HTML" \
-            -d disable_web_page_preview=true
+      #     curl -sS -X POST "https://api.telegram.org/bot${TG_BOT_TOKEN}/sendMessage" \
+      #       -d chat_id="${TG_CHAT_ID}" \
+      #       -d text="$TEXT" \
+      #       -d parse_mode="HTML" \
+      #       -d disable_web_page_preview=true
