--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ djangorestframework==3.15.2
 djangorestframework-simplejwt==5.3.1
 drf-spectacular==0.27.2
 et_xmlfile==2.0.0
+gunicorn==23.0.0
 inflection==0.5.1
 jsonschema==4.25.1
 jsonschema-specifications==2025.9.1
