--- a/requirements.txt
+++ b/requirements.txt
@@ -24,7 +24,7 @@ kombu==5.6.2
 openpyxl==3.1.5
 packaging==26.0
 prompt_toolkit==3.0.52
-psycopg2==2.9.11
+psycopg2-binary==2.9.11
 PyJWT==2.10.1
 python-dateutil==2.9.0.post0
 python-dotenv==1.0.1
