--- a/Dockerfile.prod
+++ b/Dockerfile.prod
@@ -19,5 +19,5 @@ ENV PYTHONUNBUFFERED=1
 
 EXPOSE 9000
 
-# Default: run migrations then gunicorn (override in compose if needed)
-CMD ["sh", "-c", "python manage.py migrate --noinput && gunicorn future_school.wsgi:application --bind 0.0.0.0:9000 --workers 2 --threads 2 --timeout 60"]
+# Default: migrate, collectstatic, then gunicorn (override in compose if needed)
+CMD ["sh", "-c", "python manage.py migrate --noinput && python manage.py collectstatic --noinput && gunicorn future_school.wsgi:application --bind 0.0.0.0:9000 --workers 2 --threads 2 --timeout 60"]
